# windrawlib

./: AUTHORS.md  README.md  cross_win32.ini  meson.build  tasks.py
examples/: cached-image.c  draw-cached.c  draw-gradient.c  draw-simple.c  draw-string.c  draw-styled.c  draw-transform.c  image-from-buffer.c  image-from-hbitmap.c  image-from-res.c
